--- a/setup.cfg
+++ b/setup.cfg
@@ -15,7 +15,7 @@ long_description = file: README.md
 [options]
 python_requires = >=3.6
 install_requires =
-
+    Jinja2
 packages = find:
 setup_requires =
     pytest-runner
