Hook up job DSL generation to create_pipelines script

--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -29,6 +29,7 @@ RUN pip3 install \
     Jinja2 \
     rosdistro \
     PyGithub \
+    PyYaml \
     pytest \
     pytest-mypy \
     pytest-flake8 \
