Lock down requirement versions

--- a/setup.cfg
+++ b/setup.cfg
@@ -15,12 +15,12 @@ long_description = file: README.md
 [options]
 python_requires = >=3.6
 install_requires =
-    click
-    Jinja2
-    rosdistro
-    PyGithub
-    PyYaml
-packages = find:
+    Click ==7.0
+    Jinja2 ==2.10
+    rosdistro ==0.7.0
+    PyGithub ==1.43.3
+    PyYaml ==3.13
+packages =find:
 setup_requires =
     pytest-runner
 tests_require =
