Update repo settings on build
This sets a couple of settings for repos:
- branch protection for any master/release branches
- set PR merge to squash
- remove Wikis/issues

--- a/setup.cfg
+++ b/setup.cfg
@@ -31,6 +31,7 @@ tests_require =
 [options.entry_points]
 console_scripts =
     create_pipelines = tailor_meta.create_pipelines:main
+    update_repo_settings = tailor_meta.update_repo_settings:main
 
 [aliases]
 test=pytest
