Fix building tailor-meta

--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -1,4 +1,4 @@
-FROM ubuntu:jammy
+FROM ubuntu:noble
 
 LABEL tailor="environment"
 
@@ -29,10 +29,11 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
   git
 
 COPY tailor-meta tailor-meta
-RUN pip3 install -e tailor-meta
+RUN pip3 install -e tailor-meta --break-system-packages
 
-# Create non-root user
-RUN groupadd -r tailor && useradd -ms /bin/bash -g tailor -G sudo tailor
+# Rename default ubuntu user to tailor
+RUN usermod -md /home/tailor -s /bin/bash -l tailor ubuntu
+RUN groupmod -n tailor ubuntu
 RUN echo "tailor ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers
 USER tailor
 RUN mkdir -p /home/tailor && \
