--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -12,6 +12,7 @@ ENV AWS_SECRET_ACCESS_KEY ${AWS_SECRET_ACCESS_KEY}
 
 ENV DEBIAN_FRONTEND noninteractive
 ENV PYTHONUNBUFFERED 1
+ARG APT_REFRESH_KEY
 
 RUN sed -i 's/archive.ubuntu.com/us-east-1.ec2.&/g' /etc/apt/sources.list
 RUN echo "APT refresh key=${APT_REFRESH_KEY}"
