--- a/setup.cfg
+++ b/setup.cfg
@@ -27,11 +27,15 @@ tests_require =
     pytest ==8.4.1
     pytest-mypy ==1.0.1
     pytest-flake8 ==1.3.0
+include_package_data = True
 
 [options.entry_points]
 console_scripts =
     create_pipelines = tailor_meta.create_pipelines:main
     update_repo_settings = tailor_meta.update_repo_settings:main
+
+[options.package_data]
+tailor_distro = vars/*
 
 [aliases]
 test=pytest
