--- a/setup.cfg
+++ b/setup.cfg
@@ -33,6 +33,9 @@ include_package_data = True
 console_scripts =
     create_pipelines = tailor_meta.create_pipelines:main
     update_repo_settings = tailor_meta.update_repo_settings:main
+    pull_distro_repositories = tailor_meta.pull_distro_repositories:main
+    generate_bundle_templates = tailor_meta.generate_bundle_templates:main
+    blossom = tailor_meta.blossom:main
 
 [options.package_data]
 tailor_distro = vars/*
