--- a/setup.cfg
+++ b/setup.cfg
@@ -35,6 +35,7 @@ console_scripts =
     update_repo_settings = tailor_meta.update_repo_settings:main
     pull_distro_repositories = tailor_meta.pull_distro_repositories:main
     generate_bundle_templates = tailor_meta.generate_bundle_templates:main
+    create_recipes = tailor_meta.create_recipes:main
     blossom = tailor_meta.blossom:main
 
 [options.package_data]
