Add debian templates

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,7 +39,8 @@ console_scripts =
     blossom = tailor_meta.blossom:main
 
 [options.package_data]
-tailor_distro = vars/*
+tailor_meta =
+    debian_templates/*
 
 [aliases]
 test=pytest
