--- a/setup.cfg
+++ b/setup.cfg
@@ -15,6 +15,7 @@ long_description = file: README.md
 [options]
 python_requires = >=3.12
 install_requires =
+    bloom ==0.13.0
     Click ==8.2.1
     Jinja2 ==3.1.6
     PyGithub ==2.8.1
