--- a/environment/Dockerfile
+++ b/environment/Dockerfile
@@ -30,7 +30,7 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
   python3-apt
 
 # Inject the rosdep definitions from source
-COPY rosdistro/rosdep/rosdep.yaml /etc/ros/rosdep/rosdep.yaml
+COPY rosdistro/rosdep/rosdep.yaml /etc/ros/rosdep/sources.list.d/10-tailor.list
 
 COPY tailor-meta tailor-meta
 COPY rosdistro rosdistro
