--- a/setup.cfg
+++ b/setup.cfg
@@ -42,6 +42,7 @@ console_scripts =
 [options.package_data]
 tailor_meta =
     debian_templates/*
+    debian_bootstrap_templates/*
 
 [aliases]
 test=pytest
